[gd_scene load_steps=5 format=3 uid="uid://dhwek77khoy8i"]

[ext_resource type="PackedScene" uid="uid://bewrt1dpkip21" path="res://Scenes/Player/player_ship_dock.tscn" id="1_4uvna"]
[ext_resource type="Script" uid="uid://cbr1g0hk4h3r8" path="res://Script/script_panel_dock_equip.gd" id="1_7og5e"]
[ext_resource type="Theme" uid="uid://btebubq8gxvay" path="res://Art/Theme Styles/GeneralUIThem.tres" id="1_cmmnu"]
[ext_resource type="Theme" uid="uid://bcq3ukopgadpd" path="res://Art/Theme Styles/OrangeButton.tres" id="3_7og5e"]

[node name="EquipPanel" type="Panel"]
custom_minimum_size = Vector2(1920, 1080)
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_7og5e")

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_cmmnu")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/MarginContainer"]
layout_mode = 2

[node name="LeftContainer" type="MarginContainer" parent="MarginContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(800, 0)
layout_mode = 2
size_flags_horizontal = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="LeftSection" type="VBoxContainer" parent="MarginContainer/MarginContainer/HBoxContainer/LeftContainer"]
layout_mode = 2
size_flags_horizontal = 0

[node name="TitleLabel" type="Label" parent="MarginContainer/MarginContainer/HBoxContainer/LeftContainer/LeftSection"]
visible = false
layout_mode = 2

[node name="EquipTabContainer" type="MarginContainer" parent="MarginContainer/MarginContainer/HBoxContainer/LeftContainer/LeftSection"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/MarginContainer/HBoxContainer/LeftContainer/LeftSection/EquipTabContainer"]
layout_mode = 2

[node name="EquipList" type="VBoxContainer" parent="MarginContainer/MarginContainer/HBoxContainer/LeftContainer/LeftSection/EquipTabContainer"]
custom_minimum_size = Vector2(800, 20)
layout_mode = 2

[node name="RightContainer" type="MarginContainer" parent="MarginContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(800, 0)
layout_mode = 2
size_flags_horizontal = 10
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="RightSection" type="VBoxContainer" parent="MarginContainer/MarginContainer/HBoxContainer/RightContainer"]
layout_mode = 2

[node name="PreviewContainer" type="SubViewportContainer" parent="MarginContainer/MarginContainer/HBoxContainer/RightContainer/RightSection"]
custom_minimum_size = Vector2(800, 450)
layout_mode = 2
stretch = true

[node name="PreviewViewport" type="SubViewport" parent="MarginContainer/MarginContainer/HBoxContainer/RightContainer/RightSection/PreviewContainer"]
handle_input_locally = false
size = Vector2i(800, 450)
render_target_update_mode = 4

[node name="Camera2D" type="Camera2D" parent="MarginContainer/MarginContainer/HBoxContainer/RightContainer/RightSection/PreviewContainer/PreviewViewport"]
position = Vector2(-1, 0)

[node name="DockerShip" parent="MarginContainer/MarginContainer/HBoxContainer/RightContainer/RightSection/PreviewContainer/PreviewViewport" instance=ExtResource("1_4uvna")]

[node name="InfoPanel" type="Panel" parent="MarginContainer/MarginContainer/HBoxContainer/RightContainer/RightSection"]
custom_minimum_size = Vector2(0, 240)
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="MarginContainer/MarginContainer/HBoxContainer/RightContainer/RightSection"]
layout_mode = 2

[node name="ResetButton" type="Button" parent="MarginContainer/MarginContainer/HBoxContainer/RightContainer/RightSection/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Reset"

[node name="SaveButton" type="Button" parent="MarginContainer/MarginContainer/HBoxContainer/RightContainer/RightSection/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_7og5e")
text = "Save"
